<resources>
    <string name="app_name">esmBazi</string>


    <string name="gameWithAndroid">بازی با اندروید</string>
    ‌‌<string name="ftfGame">بازی 2 نفره</string>
    <string name="OnlineGame">آنلاین</string>
    <string name="BlueGame">بلوتوث</string>

    <string name="name">اسم</string>
    <string name="time">زمان</string>
    <string name="star">تعداد ستاره</string>
    <string name="send">ارسال</string>
    <string name="help">کمک</string>

    <string name="note">توجه</string>
    <string name="infoPer">با توجه به ورژن اندروید شما ما برای ارتباط بلوتوثی نیاز به دسترسی به اجازه هایی از شما داریم
    \n توجه کنید که سازنده های اندروید همچین محدودیتی برای ما گذاشته اند
    </string>

    <string name="reDiscovery">جست و جوی مجدد</string>
    <string name="discovering">درحال جست و جو</string>
    <string name="pleaseWait">لطفا صبر کنید ...</string>

    <string name="blueOn">بلوتوث روشن کنید</string>
    <string name="blueOff">بلوتوث خاموش شد</string>
    <string name="discoveryFinished">جست و جو به پایان رسید</string>
</resources>
