<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center" android:id="@+id/linearLayout">


        <ImageView
                android:layout_width="10dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/star"
                android:id="@+id/star"
                android:contentDescription="@string/star"
                android:layout_gravity="start"
                android:layout_weight="1"
        />
        <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/starText"
                android:textColor="#ffc000"
                android:layout_weight="4"/>
        <ImageView
                android:layout_width="10dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/time"
                android:id="@+id/time"
                android:contentDescription="@string/time"
                android:layout_weight="1"
        />
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/timeText"
                android:textColor="#ffc000"
                android:layout_weight="4"/>
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/help"
                android:text="@string/help"
                android:textSize="25dp"
                android:textColor="#ffc000"
                android:gravity="center"
                android:layout_weight="1"/>
    </LinearLayout>


    <include layout="@layout/page_of_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:layout_editor_absoluteX="0dp" app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="70dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_weight="1"
                  android:id="@+id/linearLayout2">


        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="15sp"
                  android:layout_weight="1"
                  android:autofillHints="@string/name"
                  android:hint="@string/name"
                  android:textColorHint="#ffc000"
                  android:inputType="text"
                  android:maxLength="10"
                  android:id="@+id/sendText"


        />
        <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                app:srcCompat="@drawable/send"
                android:contentDescription="@string/send"
                android:id="@+id/sendIcon"
                android:layout_weight="1"

        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:visibility="gone"
                  android:text="@string/reDiscovery"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:id="@+id/search_BLUETOOTH_Device"
        />

    </LinearLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>